--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="content">
+    <div class="content" id="headerOne">
       <h2>Some random information</h2>
       <div class="container-subtext">
         <div class="containerSub">
@@ -61,7 +61,7 @@
         </div>
       </div>
     </div>
-    <div class="quotes-container">
+    <div class="quotes-container" id="headerTwo">
       <div>
         <h3>
           This is an inspiring quoute, or a testimonial from a customer. Maybe
@@ -83,6 +83,8 @@
 
       <button>Sign up</button>
     </div>
-    <div class="footer">Copyright &copy; The Odin Project 2022</div>
+    <div class="footer" id="headerThree">
+      Copyright &copy; The Odin Project 2022
+    </div>
   </body>
 </html>
